--- a/chrome-app/styles.css
+++ b/chrome-app/styles.css
@@ -17,7 +17,7 @@ body {
 
 #touchviz {
   right:0;
-  top:250px;
+  top:300px;
   min-height: 300px;
 }
 
@@ -45,7 +45,7 @@ body {
 }
 .msg table td {
   border-width: 1px;
-  padding: 8px;
+  padding: 1px 8px 1px 8px;
   border-style: solid;
   border-color: #666666;
 }
