app modes and scaling cursor

--- a/chrome-app/styles.css
+++ b/chrome-app/styles.css
@@ -9,7 +9,7 @@ body {
   margin:1em;
   background-color: #fff;
   width:400px;
-  padding:0.5em;
+  spadding:0.5em;
   min-height: 200px;
   box-shadow: 0 2px 3px #666;
   border-radius: 4px;  
