--- a/chrome-app/styles.css
+++ b/chrome-app/styles.css
@@ -54,3 +54,74 @@ body {
   float:left;
   margin-top:-20px;
 }
+
+/* layer list */
+#layerlist {
+  display: none;
+  position:absolute;
+  margin:0;
+  padding:0;
+  left:400px;
+  width:200px;
+  
+  background-color: #444;
+  box-shadow: 0 1px 3px #666;
+  border-radius: 2px;  
+}
+
+.vIndicator {
+  position:absolute;
+  height:100%;
+  width:25px;
+  left:0px;
+  margin:0;
+  padding:0;
+
+  
+  background: -webkit-gradient(
+    linear,
+    left bottom,
+    left top, 
+    color-stop(0.4, rgb(68,68,68)),
+    color-stop(0.49, rgb(143,44,53)),
+    color-stop(0.50, rgb(255,44,53)),
+    color-stop(0.51, rgb(143,44,53)),
+    color-stop(0.6, rgb(68,68,68))
+  );
+
+}
+
+ul.layers li {
+  text-align: center;
+  color: #ddd;
+  border-bottom: 1px solid #222;
+  border-top: 1px solid #666;
+  padding:0.5em 0 0.5em 0;
+  list-style: none;
+}
+
+ul.layers li:first-child {
+  border-top: none;
+}
+
+ul.layers li:last-child {
+  border-bottom: none;
+}
+
+ul.layers li.active {
+  background-color: #666;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
